[package]
name = "treblecross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treblecross = { path = "./treblecross", version = "0.1.0" }
dialoguer = "0.10.1"
console = "0.15.0"

[workspace]

members = [
    "treblecross",
]