[package]
name = "treblecross"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_treblecross = { path = "./treblecross", version = "0.1.0" }
dialoguer = "0.10.1"
console = "0.15.0"

[workspace]

members = [
    "treblecross",
]